snapshot-tests/tests/snapshots/parser__bad_nesting__inline.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[DuplicateKey]: the key `b` is defined multiple times
  ┌─ inline:4:12
  │
3 │         b = { c = 2, d = {} }
  │         - first key instance
4 │         [a.b]
  │            ^ duplicate key
