snapshot-tests/tests/snapshots/parser__bad_nesting__key_then_array.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[DuplicateKey]: the key `a` is defined multiple times
  ┌─ key_then_array:3:11
  │
2 │         a = [2]
  │         - first key instance
3 │         [[a]]
  │           ^ duplicate key
